--- a/style/about.css
+++ b/style/about.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   margin: 0 auto;
   padding: 20px 0;
-  font: 300 30px 'Oswald', sans-serif;
+  font: 20px 'Montserrat', 'sans-serif';
   color: #333;
   text-transform: uppercase;
   letter-spacing: 6px;
