--- a/style/main.css
+++ b/style/main.css
@@ -19,11 +19,11 @@ h1 {
     text-align: center;
     margin: 0 auto;
     padding: 20px 0;
-    font: 300 30px 'Oswald', sans-serif;
+    font: 300 20px 'Montserrat', 'sans-serif';
     color: #333;
     text-transform: uppercase;
     letter-spacing: 6px;
-  }
+}
 .hide-mobile {
     display: none;
 }
