--- a/style/contact.css
+++ b/style/contact.css
@@ -10,17 +10,20 @@ body {
   display: none;
 }
 .contact-container {
-  height: 90vh;
+  height: fit-content;
   display: flex;
-  align-items:flex-start;
-  justify-content: space-evenly;
+  align-items:center;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 50px;
+  margin-top: 0px;
 }
 .contact-left {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
-  padding-top: 50px;
+  padding-top: 0px;
 }
 .section-header {
   text-align: center;
@@ -64,8 +67,8 @@ body {
   background: #989f97;
   cursor: pointer;
 }
-.contact-right {
-  display: none;
+.mobile-logo {
+  width: 80vw;
 }
 .social-icon {
   display: flex;
@@ -93,24 +96,25 @@ body {
 .hide-desktop {
    display: none;
 }
-.contact-wrapper {
-  display: flex;
+.contact-container {
+  height: fit-content;
+  align-items: flex-start;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding: 20px;
-  position: relative;
-  max-width: 1200px;
+  justify-content: center;
+  padding-top: 0;
+}
+.contact-left {
+  padding-top: 50px;
 }
 .contact-inputs {
-  width: 400px;
+  width: 40vw;
 }
 .contact-right {
   display: block;
   padding-top: 50px;
 }
 .contact-right p {
-  width: 500px;
+  width: 40vw;
 }
 .contact-right img{
   width: 300px;
