--- a/style/main.css
+++ b/style/main.css
@@ -27,7 +27,7 @@ h1 {
     display: none;
 }
 .picture-container {
-    background-image: url("/img/mendocino.jpeg");
+    background-image: url("/img/Home/mendocino.jpeg");
     height: 350px;
     background-attachment: fixed;
     background-position: center top;
@@ -39,7 +39,7 @@ h1 {
     text-align: center;
 }
 .collab-image {
-    background-image: url("/img/icelandMobile.JPG");
+    background-image: url("/img/Home/icelandMobile.JPG");
     height: 400px;
     background-attachment: fixed;
     background-position: center;
@@ -106,9 +106,6 @@ h1 {
         text-transform: uppercase;
         letter-spacing: 6px;
     }
-    section h1 {
-        font-size: 1.9em;
-    }
     .section-sub-header {
         font-size: 20px;
     }
@@ -135,6 +132,11 @@ h1 {
         margin-left: 10%;
         font-size: 1em;
     }
+    .about-img img{
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+    }
 }
 
 @media only screen and (min-width: 1024px){
@@ -160,14 +162,14 @@ h1 {
         width: 500px;
     }
     .about-img img{
-        width: 500px;
+        width: 400px;
         height: 500px;
-        object-fit: cover;
     }
     .collab-image {
-        background-image: url("/img/collab-image.JPG");
-        height: 40%;
-        background-size: cover;
+        background-image: url("/img/Home/valleyOfFire.jpeg");
+        height: 60%;
+        background-size: contain;
+        background-position: center bottom;
     }
     .collab-container {
         padding: 10px 0;
@@ -187,11 +189,21 @@ h1 {
 }
 @media only screen and (min-width: 1200px){
     .picture-container {
-        background-image: url("/img/desktopBanner.jpg");
-        background-position: center top;
-        height: 40%;
+        background-image: url("/img/Home/deathValley.JPG");
+        background-position: center 70%;
+        height: 80%;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .picture-container-text{
+        margin-top: 40px;
+    }
+    .section-header {
+        font-size: 40px;
     }
     .section-sub-header {
-        margin-bottom: 30px;
+        font-size: 30px;
     }
 }
