--- a/style/about.css
+++ b/style/about.css
@@ -18,10 +18,11 @@ body {
   display: block;
 }
 .parallax {
-  background-attachment: fixed;
-  background-position: center;
+  background-attachment: scroll;
+  background-position: center 80%;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+  height: 300px;
 }
 .about-image {
   background-image: url("/img/aboutMe/alabamaHills.JPG");
@@ -30,32 +31,27 @@ body {
 }
 .land-image {
   background-image: url("/img/aboutMe/vanMobile.JPG");
-  height: 450px;
-  background-size: cover;
 }
 .sea-image {
   background-image: url("/img/aboutMe/boatMobile.jpg");
-  height: 450px;
-  background-size: cover;
 }
 .air-image {
   background-image: url("/img/aboutMe/planeMobile.jpeg");
-  height: 450px;
-  background-size: cover;
 }
 .roadless-image {
   background-image: url("/img/aboutMe/saltFlatsDistant.jpeg");
-  height: 450px;
-  background-size: cover;  
 }
-.section-header {
+.section-header, .section-title {
   text-align: center;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 10px 0;
   font-size: 30px;
   color: #333;
   text-transform: uppercase;
   letter-spacing: 6px;
+}
+.section-title {
+  padding: 50px 0;
 }
 .about-container {
     text-align: center;
@@ -75,6 +71,7 @@ body {
   display: none;
 }
 
+/* Ipad mini */
 @media only screen and (min-width: 760px){
   .hide-mobile {
     display: block;
@@ -89,39 +86,49 @@ body {
     width: 70vw;
     font-size: 18px;
   }
+  .parallax {
+    height: 500px;
+  }
+  .about-image {
+    background-image: url("/img/AboutMe/icelandPlane.JPG");
+    background-position: center 60%;
+    background-size: cover;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
   .section-header {
     font-size: 40px;
     padding: 10px 0;
   }
-  .about-image {
-    background-image: url("/img/AboutMe/icelandPlane.JPG");
-    height: 25vh;
-    background-position: center 60%;
-    background-size: cover;
-  }
-  .land-image {
-    height: 500px;
-    background-position: center 65%;
+  .section-title {
+    font-size: 40px;
+    color: white;
   }
   .sea-image {
     background-image: url("/img/aboutMe/droneBoat.jpg");
-    height: 500px;
-    background-position: center 80%;
-
   }
   .air-image {
-    height: 500px;
     background-position: center 75%;
   }
   .roadless-image {
-    height: 500px;
+    background-position: center;
   }
 }
+/* Laptop */
 @media only screen and (min-width: 1200px){
+  .parallax {
+    background-attachment: fixed;
+  }
   .about-image {
     height: 70%;
   }
   .land-image {
     background-image: url("/img/AboutMe/landLaptop.JPG");
+    background-position: center 70%;
+  }
+  .section-title {
+    font-size: 40px;
+    color: white;
   }
 }
