--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
 @import url('https://fonts.googleapis.com/css?family=Rock+Salt&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Alef&display=swap');
-
 body, html {
     height: 100%;
 }
@@ -16,9 +15,6 @@ body {
 .hide-desktop {
     display: block;
 }
-h1 {
-    font-family: 'Montserrat', 'sans-serif';
-}
 .container {
     text-align: center;
     padding: .8em 1.2em;
@@ -29,10 +25,10 @@ h1 {
 .picture-container {
     background-image: url("/img/Home/mendocino.jpeg");
     height: 350px;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center top;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -40,8 +36,8 @@ h1 {
 }
 .collab-image {
     background-image: url("/img/Home/icelandMobile.JPG");
-    height: 400px;
-    background-attachment: fixed;
+    height: 300px;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -51,7 +47,7 @@ h1 {
     font: 30px 'Montserrat', 'sans-serif';
     color: white;
     text-transform: uppercase;
-    letter-spacing: 6px;
+    letter-spacing: 7px;
 }
 .section-sub-header {
     width: 100%;
@@ -97,6 +93,7 @@ h1 {
     color: white;
 }
 
+/* Ipad Mini */
 @media only screen and (min-width: 760px){
     .section-header {
         text-align: center;
@@ -110,7 +107,7 @@ h1 {
         font-size: 20px;
     }
     .picture-container {
-        background-position: center -55%;
+        background-position: center 30%;
     }
     .about-container h1 {
         margin-bottom: 50px;
@@ -139,6 +136,7 @@ h1 {
     }
 }
 
+/* Ipad Pro */
 @media only screen and (min-width: 1024px){
     .hide-mobile{
         display: block;
@@ -148,6 +146,18 @@ h1 {
     }
     p {
         font-size: 18px;
+    }
+    .picture-container {
+        height: 40vh;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .picture-container-text {
+        margin-top: 50px;
+    }
+    .section-header, .section-sub-header{
+        color: #333;
     }
     .about-section {
         display: flex;
@@ -167,12 +177,11 @@ h1 {
     }
     .collab-image {
         background-image: url("/img/Home/valleyOfFire.jpeg");
-        height: 60%;
-        background-size: contain;
-        background-position: center bottom;
+        height: 60vh;
+        background-size: cover;
+        background-position: center 80%;
     }
     .collab-container {
-        padding: 10px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -187,23 +196,29 @@ h1 {
         height: 3rem;
     }
 }
+
+/* Laptop */
 @media only screen and (min-width: 1200px){
     .picture-container {
         background-image: url("/img/Home/deathValley.JPG");
+        background-attachment: fixed;
         background-position: center 70%;
         height: 80%;
         background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
     }
     .picture-container-text{
-        margin-top: 40px;
+        margin-top: 50px;
+    }
+    .collab-image {
+        background-attachment: fixed;
+        height: 60vh;
     }
     .section-header {
         font-size: 40px;
+        color: white;
     }
     .section-sub-header {
         font-size: 30px;
+        color: white;
     }
 }
