remove images in about me for mobile

--- a/style/about.css
+++ b/style/about.css
@@ -17,6 +17,10 @@ body {
 .hide-desktop {
   display: block;
 }
+.divider {
+  border-top: 2px solid #333;
+  margin: 20px;
+}
 .parallax {
   background-attachment: scroll;
   background-position: center 80%;
