--- a/style/nav.css
+++ b/style/nav.css
@@ -143,7 +143,7 @@ header {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #f2f0eb;
     min-width: 160px;
     z-index: 1;
   }
