--- a/style/consult.css
+++ b/style/consult.css
@@ -14,6 +14,9 @@ h1 {
   color: #333;
   text-transform: uppercase;
   letter-spacing: 6px;
+  margin: 0 5px;
+  padding: 20px 0;
+  font-size: 25px;
 }
 #more {display: none;}
 body {
@@ -28,7 +31,7 @@ body {
   letter-spacing: 6px;
 }
 .section-header p{
-  font-size: 15px;
+  font-size: 16px;
   padding: 10px;
 }
 .consult-container {
@@ -49,7 +52,7 @@ body {
   padding-bottom: 20px;
 }
 .history-container {
-  width: 80vw;
+  /* width: 80vw; */
   margin: auto;
   text-align: center;
   padding: 20px 0;
@@ -59,6 +62,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.history-left p {
+  width: 80vw;
 }
 #readMoreBtn {
  width: 50%;
