update styling on van consult page

--- a/style/consult.css
+++ b/style/consult.css
@@ -31,7 +31,7 @@ body {
   letter-spacing: 6px;
 }
 .section-header p{
-  font-size: 16px;
+  font-size: 18px;
   padding: 10px;
 }
 .consult-container {
@@ -52,7 +52,6 @@ body {
   padding-bottom: 20px;
 }
 .history-container {
-  /* width: 80vw; */
   margin: auto;
   text-align: center;
   padding: 20px 0;
@@ -278,6 +277,9 @@ body {
   .history-left {
     text-align: left;
     width: 700px;
+  }
+  .history-left p {
+    width: 50vw;
   }
   .history-right {
     display: block;
