--- a/style/main.css
+++ b/style/main.css
@@ -66,6 +66,7 @@ body {
 }
 .about-text {
     text-align: center;
+    justify-content: center;
     padding: 0 5px;
 }
 .about-text h3 {
@@ -163,16 +164,19 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        align-items: center;
         max-width: 100%;
     }
     .about-text h3 {
         padding-top: 0;
     }
     .about-text {
-        width: 500px;
+        width: 30vw;
+        font-size: 24px;
+        text-align: justify;
     }
     .about-img img{
-        width: 400px;
+        width: 500px;
         height: 500px;
     }
     .collab-image {
@@ -189,7 +193,7 @@ body {
     .collab-blurb {
         margin: 50px;
         margin-bottom: 20px;
-        width: 70vw;
+        width: 40vw;
     }
     .collab-button {
         width: 12rem;
