fix consultations color in nav

--- a/style/nav.css
+++ b/style/nav.css
@@ -130,6 +130,7 @@ header {
   }
   .dropbtn {
     color: #333;
+    background-color: #f2f0eb;
     padding: 16px;
     font-size: 16px;
     border: none;
