--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,7 @@ body, html {
 }
 body {
     margin: 0;
-    font-family: 'Montserrat', 'sans-serif';
+    font-family: "Montserrat", sans-serif;
     position: relative;
 }
 .hide-mobile{
