--- a/style/nav.css
+++ b/style/nav.css
@@ -75,6 +75,23 @@ header {
   opacity: 0;
   width: 0;
 }
+.dropdown-btn, .sidebar nav div a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #333;
+  display: block;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+.dropdown-container {
+  display: none;
+  padding-left: 16px;
+}
 .sidebar {
   transition: translate var(--animation-timing);
   translate: -100%;
@@ -83,16 +100,12 @@ header {
   padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
   background-color: var(--foreground);
   color: var(--background);
-  max-width: 10rem;
+  max-width: 15rem;
   min-height: 100vh;
   text-decoration: none;
 }
 .sidebar nav div {
   padding-bottom: .5rem;
-}
-.sidebar nav div a {
-  color: #333;
-  text-decoration: none;
 }
 .hamburger-menu:has(input:checked) + .sidebar {
   translate: 0;
