--- a/style/links.css
+++ b/style/links.css
@@ -25,6 +25,12 @@ h1 {
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
+}
+.links-container p {
+  font-size: 12px;
+  width: 80vw;
+  margin-bottom: 30px;
 }
 .build-links, .vanlife-links, .partner-links {
   margin: 5px;
@@ -39,6 +45,10 @@ h1 {
   width: 38vw;
   margin: 5px;
 }
+.link-card p{
+  margin: 10px;
+  width: unset;
+}
 .link-card h3{
   text-transform: uppercase;
   padding-bottom: 10px;
@@ -47,10 +57,6 @@ h1 {
   width: 30vw;
   object-fit: fill;
 }
-.link-card p {
-  font-size: 12px;
-  margin: 10px;
-}
 /* Ipad Pro */
 @media only screen and (min-width: 1024px){
   .hide-mobile {
@@ -58,6 +64,10 @@ h1 {
   }
   .hide-desktop {
     display: none;
+  }
+  .links-container p {
+    font-size: 16px;
+    width: 60vw;
   }
   .back-button button {
     position: absolute;
@@ -77,6 +87,11 @@ h1 {
   }
   .link-card {
     width: 33vw;
+  }
+  .link-card p {
+    width: unset;
+    font-size: 20px;
+    margin: 10px;
   }
   .link-card img {
     height: 20vh;
@@ -102,10 +117,6 @@ h1 {
 }
 .link-card h3{
   text-transform: uppercase;
-}
-.link-card p {
-  font-size: 20px;
-  margin: 10px;
 }
 .link-card img {
   margin: 10px;
