--- a/style/links.css
+++ b/style/links.css
@@ -48,7 +48,7 @@ h4 {
   align-items: center;
   text-align: center;
 }
-.sale-links, .vanlife-links {
+.sale-links, .vanlife-links, .partner-links {
   background-color: white;
 }
 .inner-page {
@@ -96,7 +96,7 @@ h4 {
     width: 70vw;
   }
   h4{
-    width: 100%;
+    width: 85%;
     padding: 0 15%;
   }
   .back-button button {
@@ -155,6 +155,7 @@ h1 {
   width: 30vw;
 }
 .partner-links .link-card {
+  width: 20vw;
   height: 40vh;
 }
 .link-card h3{
